--- a/springboot-gradle-postgres/build.gradle
+++ b/springboot-gradle-postgres/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
 	implementation 'org.postgresql:postgresql:42.3.7'
+	implementation 'org.springframework.boot:spring-boot-starter-cache:2.4.10'
 	testImplementation 'org.testcontainers:testcontainers:1.17.6'
 	testImplementation 'org.testcontainers:postgresql:1.17.6'
 	implementation 'org.testcontainers:testcontainers-bom:1.17.6'
