Added simple exception handler using zalando exception type

--- a/springboot-gradle-postgres/build.gradle
+++ b/springboot-gradle-postgres/build.gradle
@@ -32,6 +32,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
 	implementation 'org.postgresql:postgresql:42.3.7'
 	implementation 'org.springframework.boot:spring-boot-starter-cache:2.4.10'
+	implementation 'org.zalando:problem:0.27.1'
+	implementation 'org.zalando:jackson-datatype-problem:0.27.1'
+	implementation 'org.zalando:problem-gson:0.27.1'
+	implementation 'org.zalando:problem-spring-web-starter:0.27.0'
 	testImplementation 'org.testcontainers:testcontainers:1.17.6'
 	testImplementation 'org.testcontainers:postgresql:1.17.6'
 	implementation 'org.testcontainers:testcontainers-bom:1.17.6'
