--- a/springboot-gradle-postgres/src/main/resources/application.yml
+++ b/springboot-gradle-postgres/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   profiles:
     active: local
+  resources:
+    add-mappings: false
+  mvc:
+    throw-exception-if-no-handler-found: false
+  http:
+    encoding:
+      force: true
