--- a/springboot-gradle-postgres/src/main/resources/application.yml
+++ b/springboot-gradle-postgres/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   resources:
     add-mappings: false
   mvc:
-    throw-exception-if-no-handler-found: false
+    throw-exception-if-no-handler-found: true
   http:
     encoding:
       force: true
